I18N move language files to json and update

--- a/packages/ia-components/sandbox/languages/google/_.txt
+++ b/packages/ia-components/sandbox/languages/google/_.txt
@@ -10,6 +10,7 @@ audio
 Be the first one to
 BLOG
 Broken or Empty Data
+by
 cannot be found or does not have metadata
 Changing language from
 Changing language to
@@ -25,6 +26,7 @@ Completed
 Concerts
 Connecting
 CONTACT
+Contributors
 crawled by
 Crawling all
 Crawling details
@@ -64,6 +66,7 @@ eye
 Favorite
 favorite
 Favorite this item
+Fetching language file for
 Fetching more results
 Files
 files
@@ -75,6 +78,7 @@ FORUM
 Forum
 Forum not yet supported on DWeb - heading to the legacy web
 fullscreen view
+GATEWAY
 GO
 go
 Go to image
@@ -111,6 +115,7 @@ movies
 Name
 Next
 Not Downloaded
+OCR
 of
 Offline
 on
@@ -127,10 +132,13 @@ Please download files in this item to interact with them on your computer
 plus-circle
 Poster
 POSTS
+PPI
 preview
 Previous
 Progress
 PROJECTS
+Publication date
+Publishers
 Queue
 Related Items
 RELEVANCE
@@ -142,6 +150,7 @@ Reviewer
 REVIEWS
 RIGHTS
 rows at
+Run time
 Running
 Save
 Save this
@@ -179,6 +188,7 @@ SORT BY
 sound is off.  click for sound.
 sound is on.  click to mute sound.
 Spam, Scam or Fraud
+Sponsor
 Still being implemented
 Subject
 Terms of Service
@@ -190,6 +200,7 @@ tile
 time
 TITLE
 Top Collections at the Archive
+Topics
 Try a more general search
 Try different keywords
 TV
@@ -216,13 +227,3 @@ web pages
 Working on
 write a review
 Your search did not match any items in the Archive. Suggestions
-by
-Publication date
-Topics
-Publishers
-Sponsor
-Contributors
-OCR
-Run time
-PPI
-
