--- a/packages/ia-components/sandbox/languages/google/hindi.txt
+++ b/packages/ia-components/sandbox/languages/google/hindi.txt
@@ -10,10 +10,11 @@
 पहले वाले बनो
 ब्लॉग
 टूटा हुआ या खाली डाटा
+द्वारा
 नहीं मिल सकता है या मेटाडेटा नहीं है
 से बदलती भाषा
 भाषा को बदलना
-प्लेयर ट्राय फ्लैश पहले क्लिक करें, फिर एचटीएमएल 5 सेकंड
+प्लेयर ट्राय फ़्लैश पहले क्लिक करें, फिर HTML5 सेकंड
 संग्रह
 संग्रह
 संग्रह
@@ -25,10 +26,11 @@
 संगीत कार्यक्रम
 कनेक्ट
 संपर्क करें
+योगदानकर्ता
 द्वारा क्रॉल किया गया
 सब रेंगते हुए
 रेंगने का विवरण
-कटा मेटाडाटा
+कटा हुआ मेटाडेटा
 रेंगती हुई टाइल
 क्रॉल
 रचनाकार
@@ -64,6 +66,7 @@ etree
 पसंदीदा
 पसंदीदा
 इस आइटम को पसंदीदा
+के लिए भाषा फ़ाइल ला रहा है
 अधिक परिणाम प्राप्त करना
 फ़ाइलें
 फ़ाइलें
@@ -75,6 +78,7 @@ etree
 मंच
 फोरम अभी तक DWeb पर समर्थित नहीं है - विरासत वेब पर जा रहा है
 फुलस्क्रीन दृश्य
+GATEWAY
 जाओ
 जाओ
 छवि पर जाएं
@@ -111,6 +115,7 @@ etree
 नाम
 आगे
 डाउनलोड नहीं हुआ
+ओसीआर
 का
 ऑफलाइन
 पर
@@ -127,10 +132,13 @@ etree
 प्लस-चक्र
 पोस्टर
 पोस्ट
+पीपीआई
 पूर्वावलोकन
 पिछला
 प्रगति
 परियोजनाओं
+प्रकाशन तिथि
+प्रकाशक
 पंक्ति
 संबंधित चीजें
 प्रासंगिकता
@@ -142,6 +150,7 @@ etree
 समीक्षाएं
 अधिकार
 पंक्तियों पर
+भागो समय
 चल रहा है
 सहेजें
 इसे बचाएं
@@ -179,6 +188,7 @@ SIMILAR आइटम (मेटाडेटा पर आधारित)
 ध्वनि बंद है। ध्वनि के लिए क्लिक करें
 ध्वनि जारी है ध्वनि को म्यूट करने के लिए क्लिक करें।
 स्पैम, घोटाला या धोखाधड़ी
+प्रायोजक
 अभी भी लागू किया जा रहा है
 विषय
 सेवा की शर्तें
@@ -190,6 +200,7 @@ SIMILAR आइटम (मेटाडेटा पर आधारित)
 समय
 शीर्षक
 संग्रह में शीर्ष संग्रह
+विषय
 एक अधिक सामान्य खोज का प्रयास करें
 अलग-अलग कीवर्ड आज़माएं
 टीवी
