--- a/packages/ia-components/sandbox/languages/google/japanese.txt
+++ b/packages/ia-components/sandbox/languages/google/japanese.txt
@@ -10,6 +10,7 @@ Attribution-NonCommercial-NoDerivs
 最初の人になる
 ブログ
 破損または空のデータ
+沿って
 見つからないか、メタデータがありません
 言語を変更する
 言語を変更する
@@ -25,6 +26,7 @@ Attribution-NonCommercial-NoDerivs
 コンサート
 接続中
 接触
+寄稿者
 クロールされた
 すべてをクロールする
 クロールの詳細
@@ -43,7 +45,7 @@ Attribution-NonCommercial-NoDerivs
 審査日
 レビュー日
 分散型インターネットアーカイブ
-記述
+説明
 説明
 詳細
 ディレクトリ
@@ -64,6 +66,7 @@ etree
 お気に入り
 お気に入り
 このアイテムをお気に入り
+の言語ファイルを取得しています
 より多くの結果を取得する
 ファイル
 ファイル
@@ -75,6 +78,7 @@ etree
 フォーラム
 DWebでまだサポートされていないフォーラム-レガシーWebへ
 全画面表示
+ゲートウェイ
 行く
 行く
 画像に移動
@@ -87,7 +91,7 @@ DWebでまだサポートされていないフォーラム-レガシーWebへ
 コレクションで
 情報
 インターネットアーカイブ
-無料の本、映画、ソフトウェア、音楽、ウェブサイトなどの無数の非営利ライブラリです。
+何百万もの無料の本、映画、ソフトウェア、音楽、ウェブサイトなどの非営利ライブラリです。
 項目
 項目
 アイテム画像
@@ -111,6 +115,7 @@ DWebでまだサポートされていないフォーラム-レガシーWebへ
 名前
 次
 ダウンロードしていない
+OCR
 の
 オフライン
 オン
@@ -127,10 +132,13 @@ DWebでまだサポートされていないフォーラム-レガシーWebへ
 プラスサークル
 ポスター
 投稿
+PPI
 プレビュー
 前
 進捗
 プロジェクト
+発行日
+出版社
 キュー
 関連商品
 関連性
@@ -142,6 +150,7 @@ DWebでまだサポートされていないフォーラム-レガシーWebへ
 レビュー
 権利
 行
+実行時間
 ランニング
 セーブ
 これを保存
@@ -151,7 +160,7 @@ DWebでまだサポートされていないフォーラム-レガシーWebへ
 調べる
 アーカイブされたWebサイトを検索する
 書籍の全文を検索
-内部を検索する
+内部を検索
 検索メタデータ
 検索オプション
 アーカイブを検索する
@@ -177,8 +186,9 @@ DWebでまだサポートされていないフォーラム-レガシーWebへ
 ソフトウェア
 並び替え
 音はオフです。音をクリックします。
-音がオンです。クリックして音をミュートします。
+音はオンです。クリックして音をミュートします。
 スパム、詐欺、詐欺
+スポンサー
 まだ実装中
 件名
 利用規約
@@ -190,6 +200,7 @@ DWebでまだサポートされていないフォーラム-レガシーWebへ
 時間
 タイトル
 アーカイブのトップコレクション
+トピック
 より一般的な検索を試してください
 別のキーワードを試す
 テレビ
@@ -206,7 +217,7 @@ DWebでまだサポートされていないフォーラム-レガシーWebへ
 ビュー
 景色
 ボランティア
-待っています
+待ってる
 もっと欲しい？
 ウェブ
 ウェブ
