--- a/packages/ia-components/sandbox/languages/google/japanese_metadata.txt
+++ b/packages/ia-components/sandbox/languages/google/japanese_metadata.txt
@@ -1,250 +1,398 @@
 アクセス
 受入番号
-追加された日付
+追加日
 加算器
 アルバム
-Archiveit-account-id
-Archiveit-account-organization-name
-Archiveit-collection-id
-アーカイブコレクション名
-Archiveit-recurrence
+JPGを許可
+高度
+からの申し立て
+ArchiveitアカウントID
+Archiveitアカウント組織名
+ArchiveitコレクションID
+Archiveitコレクション名
+Archiveitジョブタイプ
+Archiveit再発
 記事タイプ
 アーティスト
 アスペクト比
 に割り当てられた
 添付番号
-Audio_codec
-Audio_sample_rate
-Audio_type
+オーディオコーデック
+オーディオサンプルレート
+オーディオタイプ
 著者
-Avg_rating
+著者ID
+平均評価
 バックアップ場所
 バーコード
+より良いPDF
+BIB ID
+BIBレベル
+ビットセーバーのファイル名
 ブックプレートリーフ
-ボキシド
-ボキシド_2
-Btih
+ボックスID
+ボックスID 2
+BTIH
+電話番号
 電話番号
 カメラ
 ケースの原因
 ケース名
-Ccnum
+ケースタイプ情報
+カテゴリー
+CC番号
+チャプター
+キャラクターズ
 シティ
 クラス
-Closed_captioning
+クローズドキャプション
 コレクション
-コレクションライブラリ
+コレクションライブラリー
+コレクションID
 色
+接触
+コンテナID
+コンテナID 2
+コンテンツの種類
 寄稿者
-著作権証拠
-著作権の証拠の日付
-著作権-証拠-演算子
+著作権
+著作権の証拠
+著作権証拠の日付
+著作権証拠演算子
 著作権地域
+著作権者
+著作権表示
+著作権者
+著作権年
 裁判所
 カバレッジ
 昇降補助具
 クロールジョブ
 日付を作成します
+作成日
 作成者
-CreatorSorter
-CreatorSorterRaw
+作成者の代替スクリプト
+クリエイターソーター
+クリエイターソーター生
 クレジット
 文化
+正確なメモ
+キュレート状態
 キュレーション
 日付
-日付ケースファイル
-日付ケース終了
-最後のファイリング
-Date.raw
+提出された日付
+ケース終了日
+最終提出日
+生の日付
 作成日
+日
 説明
+デジタルアイテム
+デジタル出版日
 次元
-Doc-num
-ドケット番号
+ディレクター
+ディスク
+書類番号
+整理番号
+ドキュメントID
 ドナー
 ダウンロード
+DRGカテゴリー
+DRGローテーション
+DRGセクター
+DRG翻訳
+DRG UTM東化
+DRG UTM northe NIN g
+DRG Xスケール
+DRG Yスケール
 期間
 版
+エミュレータ
+エミュレーターext
+エミュレーター開始
 審査官名
 外部識別子
-エクストラマーク
-Filesxml
+余分なMARC
+失敗の理由
+お気に入り
+料金ステータス
+ファイル名
+ファイルXML
 出願日
-FirstCreator
-FirstTitle
-最初のファイル日付
-Firstfileserial
-ファーストネーム
-フォールドカウント
-Frames_per_second
-Google-id
+最初の作成者
+最初のタイトル
+初公開
+最初のファイルの日付
+最初のファイルシリアル
+最初の発明者
+フォールドアウト演算子
+フォールドアウト秒
+フォールドアウトカウント
+フォローする
+1秒あたりのフレーム
+ギャラリーID
+ジャンル
+Google ID
 グループアートユニット
+mp3あり
+非表示
+保有者
+ID
 識別子
 識別子アクセス
-識別子アーク
-識別子ビブ
+識別子ARK
+識別子BIB
+識別子BIB
 画像数
+インプリント
 初回リリース
-発明家
-発明者国
+Insightu ID
+発明家の街
+発明者の国
+発明者の州
 請求書
-Is_clip
-Isbn
-Issn
+クリップです
+ISBN
+ISSN
+問題
 発行日
-Journalabbrv
-ジャーナルタイトル
+ジャーナル
+雑誌のタイトル
+ジャーナルの略語
+雑誌のタイトル
 管轄
-審査員
+審査員の要求
+キーワード
+ランドマーク
 言語
-LanguageSorter
+言語選別機
+最終更新日
 最後の日付
 最終ファイル日付
-Lastfileserial
+最後のファイルシリアル
 緯度
-Lcamid
-Lccn
-Lg_lastmodifieddate
-Licenseurl
+LCAM ID
+LCCN
+Lg最終変更日
+ライセンス
+ライセンスURL
 系統
+カタログへのリンク
 ロケーション
+場所の日付
 経度
 成人向けコンテンツ
-Md5s
+MD5S
 メディアタイプ
 中
 単色
 月
-Mpeg_program
-Nalコール番号
+MPEGプログラム
+NALコール番号
 スーツの性質
 次
 次のアイテム
+NINファイル
+NINミックスID
+NIN番号の評価
+NIN写真
+NIN評価の平均
+NINトータルリスン
+NINユーザーID
+アーカイブなし
 インデックスなし
 ノート
-Num_reviews
-Numwarcs
-Oclc-id
-Ocr
+最近のレビュー数
+番号レビュー
+番号トップdl
+番号エリックID
+番号WARC
+OCLC
+OCLC ID
+OCR
 オルサーチ
 Openlibrary
 オペレーター
-Originalurl
-Other_copyright_holders
+元のURL
+その他の著作権者
 ペイサーケース番号
 ページ進行
+ページレイアウト
 ページ範囲
-Partner_shiptracking
+Pages
+パートナー船の追跡
 一部の
-Perma_url
-可能著作権ステータス
+パーマURL
+身体的特徴
+物理的なアイテム
+ピック
+ピーススタイル
+考えられる著作権ステータス
 投稿者
-Ppi
+PPI
 前
-Previous_item
+前のアイテム
 出所
+Ptpアップロード日
+パブ日付
+公
+出版タイプ
 公開日
+公開済み
 出版社
 格付け
-ラカミド
-関連外部ID
+RCAM ID
+参照先
+関連する外部ID
+発売日
 リリースタイプ
-Repub_seconds
-Repub_state
+秒を再公開
+状態を再公開
 再発行者
+再発行者の日付
+再出版業者
+再発行者の時間
 資源
-レビューボディ
+レビューID
+レビュー本文
 レビュー日
 レビュアー
+レビュー
 レビュータイトル
 権利
-ランタイム
+権利声明
+実行時間
 顕著
-Salients.raw
+生の顕著
 スキャン日
-スキャンファクター
-スキャンフィー
+スキャン係数
+スキャン料金
 スキャナー
-スキャニングセンター
+スキャンセンター
+セクシオン
+副題
+セクション
 シリアルURL
 シリーズ
+棚
 出荷用コンテナ
 船舶追跡
-サイズヒント
+Shndiscs
+サイト
+サイズのヒント
+SK ID
+SKマジック
+SKオーナー
+SKオーナーニック
+SKタイプ
 音
 ソース
-Source_pixel_height
-Source_pixel_width
-Source_schedule
-Source_url
+ソース組織
+ソースピクセルの高さ
+ソースピクセル幅
+ソースプロジェクト
+ソーススケジュール
+ソースURL
 スポンサー
 スポンサー日付
 出演者
-Start_localtime
+現地時間を開始
 始まる時間
+状態
 駅名
 状態
 停止時間
-Stripped_tags
+ストリップされたタグ
 サブクラス
+サブコレクション
 件名
-SubjectSorter
-Submitted_url
+件名選別機
+送信されたURL
+概要
 テーパー
+タイムゾーン
 タイトル
-TitleSorter
-TitleSorterRaw
+タイトル代替スクリプト
+タイトルソーター
+タイトルソーター生
+タイトルID
+トランスクルード
 譲渡人
-Trk_cnt
-Trk_coherent
-Trk_disc_cnt
-Trk_format
-Trk_len_01
-Trk_len_02
-Trk_len_03
-Trk_len_04
-Trk_len_05
-Trk_len_06
-Trk_len_07
-Trk_len_08
-Trk_len_09
-Trk_len_10
-Trk_len_11
-Trk_len_12
-Trk_len_13
-Trk_len_14
-Trk_len_15
-Trk_len_16
-Trk_len_17
-Trk_len_18
-Trk_len_19
-Trk_len_20
-Trk_len_sum
-Trk_src_fmt
+翻訳者
+トラック数
+コヒーレントを追跡する
+ディスク数の追跡
+トラックフォーマット
+トラック長01
+トラック長02
+トラック長03
+トラック長04
+トラック長05
+トラック長06
+トラック長07
+トラック長08
+トラック長09
+トラック長10
+トラック長11
+トラック長12
+トラック長13
+トラック長14
+トラック長15
+トラック長16
+トラック長17
+トラック長18
+トラック長19
+トラック長20
+トラック長21
+トラック長22
+トラック長23
+トラック長24
+トラック長25
+トラック長26
+トラック長27
+トラック長28
+トラック長29
+トラック長の合計
+src形式の追跡
 チューナー
 タイプ
 一意のID
+更新しました
 更新日
 アップデーター
 アップローダー
-ウリ
+URI
 URL
-utc_offset
+UTCオフセット
 会場
-Video_codec
+ビデオコーデック
+ビデオの種類
+Vimeoの高さ
+Vimeo ID
+Vimeo nエントリ
+Vimeoプレイリスト
+Vimeoプレイリストインデックス
+Vimeoアップローダー
+VimeoアップローダーID
+Vimeoビュー数
+Vimeo WebページのURL
+Vimeoの幅
 ボリューム
-Wcd_uploaddate
+警告
+WCDアップロード日
 週間
 何
 どこ
+WMAリソース
+言葉
 年
-Youtube-height
-Youtube-id
-Youtube-n-entries
+作成された年
+変更された年
+Youtubeの高さ
+Youtube ID
+Youtube nエントリ
 Youtubeプレイリスト
-Youtube-playlist-index
+Youtubeプレイリストインデックス
 Youtubeアップローダー
-Youtube-uploader-id
-Youtube-view-count
-Youtube-webpage-url
-Youtube-width
+YoutubeアップローダーID
+Youtube
