--- a/packages/ia-components/sandbox/languages/google/marathi.txt
+++ b/packages/ia-components/sandbox/languages/google/marathi.txt
@@ -10,6 +10,7 @@
 प्रथम व्हा
 ब्लॉग
 तुटलेली किंवा रिक्त डेटा
+द्वारा
 आढळू शकत नाही किंवा मेटाडेटा नाही
 वरून भाषा बदलत आहे
 भाषा बदलत आहे
@@ -21,10 +22,11 @@
 संग्रह
 टिप्पणी
 टिप्पण्या
-पूर्ण झाले
+पूर्ण
 मैफिली
 कनेक्ट करीत आहे
 संपर्क
+हातभार लावणारा
 क्रॉल करून
 सर्वांना रेंगाळत
 क्रॉलिंग तपशील
@@ -64,6 +66,7 @@ URL किंवा कीवर्ड प्रविष्ट करा
 आवडते
 आवडते
 हा आयटम आवडता करा
+यासाठी भाषा फाईल आणत आहे
 अधिक निकाल आणत आहे
 फायली
 फायली
@@ -75,6 +78,7 @@ URL किंवा कीवर्ड प्रविष्ट करा
 मंच
 लीगेसी वेबवर जाणे - डीव्हीबवर अद्याप फोरम समर्थित नाही
 पूर्णस्क्रीन दृश्य
+गेटवे
 जा
 जा
 प्रतिमेवर जा
@@ -111,6 +115,7 @@ URL किंवा कीवर्ड प्रविष्ट करा
 नाव
 पुढे
 डाउनलोड केलेले नाही
+ओसीआर
 च्या
 ऑफलाइन
 चालू
@@ -127,10 +132,13 @@ URL किंवा कीवर्ड प्रविष्ट करा
 अधिक-मंडळ
 पोस्टर
 पोस्ट
+पीपीआय
 पूर्वावलोकन
 मागील
 प्रगती
 प्रकल्प
+प्रकाशनाची तारीख
+प्रकाशक
 रांग
 संबंधित वस्तू
 सुसंगतता
@@ -142,6 +150,7 @@ URL किंवा कीवर्ड प्रविष्ट करा
 पुनरावलोकने
 अधिकार
 वर पंक्ती
+धावण्याची वेळ
 चालू आहे
 जतन करा
 हे सेव्ह करा
@@ -175,10 +184,11 @@ URL किंवा कीवर्ड प्रविष्ट करा
 सिमलार आयटम (मेटाडेटावर आधारित)
 सॉफ्टवेअर
 सॉफ्टवेअर
-क्रमवारी लावा
+द्वारे क्रमवारी लावा
 आवाज बंद आहे ध्वनी क्लिक करा.
 आवाज चालू आहे आवाज नि: शब्द करण्यासाठी क्लिक करा.
 स्पॅम, घोटाळा किंवा फसवणूक
+प्रायोजक
 अद्याप अंमलात आणले जात आहे
 विषय
 सेवा अटी
@@ -190,6 +200,7 @@ URL किंवा कीवर्ड प्रविष्ट करा
 वेळ
 शीर्षक
 संग्रहणातील शीर्ष संग्रह
+विषय
 अधिक सामान्य शोध करून पहा
 भिन्न कीवर्ड वापरुन पहा
 टीव्ही
