--- a/packages/ia-components/sandbox/languages/google/myanmar_metadata.txt
+++ b/packages/ia-components/sandbox/languages/google/myanmar_metadata.txt
@@ -1,250 +1,398 @@
 အသုံးပြုခွင့်
-Accession_number
-ကဗျာ
+ဝင်ရောက်နံပါတ်
+ထည့်သွင်းထားသောနေ့စွဲ
 မင်္ဂလာပါ
 အယ်လ်ဘမ်
-မော်ကွန်းတိုက် - အကောင့် - id
-မော်ကွန်းတိုက် - အကောင့် - အဖွဲ့အစည်းက - အမည်
-မော်ကွန်းတိုက် - စုဆောင်းခြင်း - အိုင်ဒီ
-မော်ကွန်းတိုက် - စုဆောင်းမှု - အမည်
-မော်ကွန်းတိုက် - ထပ်မဖြစ်အောင်
+JPG များကိုခွင့်ပြုပါ
+အမြင့်
+အယူခံ
+Archiveit အကောင့် ID ကို
+မော်ကွန်းတိုက်အကောင့်အဖွဲ့အစည်းအမည်
+မော်ကွန်းတိုက်စုဆောင်းခြင်း ID ကို
+မော်ကွန်းတိုက်စုဆောင်းခြင်းအမည်
+မော်ကွန်းတိုက်အလုပ်အမျိုးအစား
+Archiveit ထပ်မဖြစ်အောင်
 ဆောင်းပါးအမျိုးအစား
 အနုပညာရှင်
-ရှုခင်း
-တာဝန်ပေးအပ်ရန်
-ပူးတွဲပါနံပါတ်
-Audio_codec
-Audio_sample_rate
-audio_type
+ရှုထောင့်အချိုး
+မှတာဝန်ကျ
+တွဲနံပါတ်
+အသံ codec
+အသံနမူနာနှုန်းကို
+အသံအမျိုးအစား
 စာရေးသူ
-Avg_rating
-Backup_location
+စာရေးသူ ID
+ပျမ်းမျှအဆင့်သတ်မှတ်ချက်
+Backup တည်နေရာ
 ဘားကုဒ်
-ကွမ်းခြံကုန်း
-Boxid
-Boxid_2
-Btih
-Call_number
+ပိုကောင်းတဲ့ PDF
+BIB ID
+BIB အဆင့်
+Bitsavers ဖိုင်နာမည်
+စာအုပ်ပြား
+လေးထောင့်ကွက် ID
+လေးထောင့်ကွက် 2
+BTIH
+ဖုန်းနံပါတ်
+ဖုန်းနံပါတ်
 ကင်မရာ
-ကိစ္စရပ် - အကြောင်းမရှိ
-အမှုအခင်းအမည်
-ccnum
+ဖြစ်ရပ်မှန်
+ကိစ္စနာမည်
+ဖြစ်ရပ်မှန်အမျိုးအစားအချက်အလက်
+အမျိုးအစား
+CC နံပါတ်
+အခန်းကြီး
+ဇာတ်ကောင်များ
 မြို့တော်
 အတန်း
-ပိတောက်ပန်း
+ပိတ်ထားသောစာတန်း
 စုဆောင်းမှု
-စုဆောင်းမှု - စာကြည့်တိုက်
+စုဆောင်းမှုစာကြည့်တိုက်
+Collection ID
 အရောင်
+ဆက်သွယ်ရန်
+ကွန်တိန်နာ ID
+ကွန်တိန်နာ ID ကို 2
+အကြောင်းအရာအမျိုးအစား
 လှူဒါန်းသူ
+မူပိုင်ခွင့်
 မူပိုင်ခွင့်အထောက်အထား
-မူပိုင်ခွင့်အထောက်အထား - နေ့စွဲ
-မူပိုင်ခွင့် - သက်သေအထောက်အထား - အော်ပရေတာ
+မူပိုင်ခွင့်အထောက်အထားရက်စွဲ
+မူပိုင်ခွင့်အထောက်အထားအော်ပရေတာ
 မူပိုင်ခွင့်ဒေသ
+မူပိုင်ခွင့်ကိုင်ဆောင်သူ
+မူပိုင်ခွင့်ထုတ်ပြန်ချက်
+မူပိုင်ခွင့်ကိုင်ဆောင်သူ
+မူပိုင်ခွင့်နှစ်
 တရားရုံး
 လွှမ်းခြုံမှု
 ခွေး
-နင်
-နေပြည်တော်
+အလုပ်ရှာ
+ရက်စွဲဖန်တီးပါ
+Created date
 ဖန်ဆင်းရှင်
-မင်္ဂလာပါ
-မင်္ဂလာပါ
+Creator alt ဇာတ်ညွှန်း
+ဖန်ဆင်းရှင် Sorter
+ဖန်ဆင်းရှင် Sorter Raw
 ချေးငွေ
-ယဉျကြေးမှု
+ယဉ်ကျေးမှု
+မှတ်စုရေးပါ
+Curate ပြည်နယ်
 ရူပ
 ရက်စွဲ
-ရက်စွဲ - အမှု - တင်သွင်း
-ရက်စွဲ - ကိစ္စရပ် - ရပ်စဲ
-ရက်စွဲ - နောက်ဆုံး - ဖြည့်စွက်
-ရက်
-ရက်စွဲ
+ရက်စွဲအမှုတင်သွင်း
+နေ့စွဲအမှုရပ်စဲ
+နောက်ဆုံးဖြည့်စွက်သည့်နေ့စွဲ
+ရက်စွဲကုန်ကြမ်း
+ရက်စွဲဖန်တီးပြီး
+နေ့
 ဖော်ပြချက်
+ဒစ်ဂျစ်တယ်ပစ္စည်း
+ဒီဂျစ်တယ်ထုတ်ဝေသည့်နေ့စွဲ
 အရွယ်အစား
-Doc-num
-စာရင်းနံပါတ်
+ဒါရိုက်တာ
+disk များ
+စာရွက်စာတမ်းနံပါတ်
+အိတ်ကပ်နံပါတ်
+စာရွက်စာတမ်း ID
 အလှူရှင်
 downloads
+DRG အမျိုးအစား
+DRG လည်ပတ်မှု
+DRG ကဏ္။
+DRG ဘာသာပြန်ဆိုခြင်း
+အရှေ့ဘက် DRG UTM
+NIN ဆ g northe DRG UTM
+DRG X စကေး
+DRG Y စကေး
 ကြာချိန်
 ထုတ်ဝေ
-Examinername
-ပြင်ပ - အမှတ်အသား
-Extramarc
-Filesxml
-Filingdate
-ပထမအကြိမ်
-ပထမ ဦး ဆုံးခေါင်းစဉ်
-ပထမ
-ပထမ
-ပထမ ဦး ဆုံး
-Foldoutcount
-Frames_per_second
-Google-id
-တောင်ကြီးမြို့
+emulator
+Emulator ext
+emulator စတင်
+စာမေးပွဲအမည်
+ပြင်ပအမှတ်အသား
+အပို MARC
+အကြောင်းပြချက်မအောင်မြင်ပါ
+အကြိုက်ဆုံးများ
+ကြေး status
+ဖိုင်နာမည်
+ဖိုင်များ XML
+ဖြည့်စွက်သည့်နေ့စွဲ
+ပထမဖန်ဆင်းရှင်
+ပထမခေါင်းစဉ်
+ပထမ ဦး ဆုံးထုတ်ဝေခဲ့သည်
+ပထမဖိုင်နေ့စွဲ
+ပထမ ဦး ဆုံးအမှတ်စဉ်ဖိုင်
+ပထမ ဦး ဆုံးအမည်ခံတီထွင်သူ
+Foldout အော်ပရေတာ
+Foldout စက္ကန့်
+Foldout အရေအတွက်
+အောက်ပါ
+တစ်စက္ကန့်လျှင်ဘောင်
+ပြခန်း ID
+အမျိုးအစား
+Google ID
+Group မှအနုပညာယူနစ်
+mp3
+Hidden
+ကိုင်ဆောင်သူ
+ID
 အမှတ်အသား
-အမှတ်အသား - ဝင်ရောက်ခွင့်
-အမှတ်အသား - သင်္ဘော
-အမှတ်အသား -bob
-ပုံရိပ်
-ကန ဦး က
-တီထွင်မှု
-တီထွင်သူ
+အမှတ်အသားချိတ်ဆက်မှု
+အမှတ်အသား ARK
+အမှတ်အသား BIB
+အမှတ်အသား BIB
+ပုံအရေအတွက်
+ပုံနှိပ်ထုတ်ဝေသည်
+ကန ဦး ထုတ်ပြန်ချက်
+Insightu ID
+တီထွင်သူမြို့
+တီထွင်သူနိုင်ငံ
+တီထွင်သူပြည်နယ်ပြည်နယ်
 ငွေတောင်းခံလွှာ
-Is_clip
-Isbn
-အရေး
+ကလစ်ဖြစ်ပါတယ်
+ISBN
+ISSN
+ထုတ်ပြန်သည်
 ထုတ်ပြန်ရက်စွဲ
 ဂျာနယ်
-ဂျာနယ်
+ဂျာနယ်ခေါင်းစဉ်
+ဂျာနယ်အတိုကောက်
+ဂျာနယ်ခေါင်းစဉ်
 တရားစီရင်ပိုင်ခွင့်
 ဂျူရီဝယ်လိုအား
+သော့ချက်စာလုံးများ
+အထင်ကရ
 ဘာသာစကား
-ဘာသာစကား
+ဘာသာစကား Sorter
+နောက်ဆုံးနောက်ဆုံးနေ့စွဲ
 နောက်ဆုံးရက်
-နောက်ဆုံး
-နောက်ဆုံး
+နောက်ဆုံးဖိုင်ရက်စွဲ
+နောက်ဆုံးဖိုင်တွဲ
 လတ္တီတွဒ်
-Lcamid
-Lccn
-Lg_lastmodifieddate
-လိုင်ဇာ
-နွယ်
+LCAM ID
+LCCN
+LG နောက်ဆုံးပြုပြင်ထားသောရက်စွဲ
+လိုင်စင်
+လိုင်စင် URL
+မျိုးရိုး
+catalog မှ link
 တည်နေရာ
+တည်နေရာရက်စွဲ
 လောင်ဂျီတွဒ်
-ချစ်သူ
-Md5s
-အမျိုးအစား
+ရင့်ကျက်သောအကြောင်းအရာ
+MD5S
+မီဒီယာအမျိုးအစား
 အလယ်အလတ်
 Monochromatic
 လ
-Mpeg_program
-Nal ခေါ်ဆိုမှုနံပါတ်
-သဘာဝ -of- ဝတ်စုံကို
+MPEG အစီအစဉ်
+NAL ခေါ်ဆိုမှုနံပါတ်
+ဝတ်စုံ၏သဘောသဘာဝ
 နောက်တစ်ခု
 နောက်တစ်ခု
+NIN ဖိုင်
+NIN ရောနှော ID ကို
+နံပါတ်အဆင့်သတ်မှတ်ချက်ကိုးခု
+NIN ဓာတ်ပုံ
+ပျမ်းမျှကိုးနှုန်း NIN
+စုစုပေါင်းကိုးနားထောင်သည်
+အသုံးပြုသူ ID နံပါတ်
+Noarchivetorrent
 Noindex
 မှတ်စုများ
-Num_reviews
-Numwarcs
-Oclc-id
-Ocr
+မကြာသေးမီကပြန်လည်သုံးသပ်ခြင်းနံပါတ်
+သုံးသပ်ချက်များနံပါတ်
+နံပါတ်ထိပ် dl
+eric ID နံပါတ်
+နံပါတ် WARCs
+OCLC
+OCLC ID
+OCR
 Olsearch
 စာကြည့်တိုက်
 အော်ပရေတာ
-မူရင်း
-Other_copyright_holders
-Pacer-case-num
+မူရင်း URL
+အခြားမူပိုင်ခွင့်ပိုင်ရှင်များ
+Pacer ကိစ္စနံပါတ်
 စာမျက်နှာတိုးတက်မှု
-ပုဂံ
-လုပ်ဖော်ကိုင်ဖက်
+စာမျက်နှာအပြင်အဆင်
+စာမျက်နှာအကွာအဝေး
+စာမျက်နှာများ
+တွဲဖက်သင်္ဘောခြေရာခံခြင်း
 တစ်စိတ်တစ်ပိုင်း
-Perma_url
-ဖြစ်နိုင်သော - မူပိုင်ခွင့်အခြေအနေ
-နေပြည်တော်
-ppi
+Perma URL
+ရုပ်ပိုင်းဆိုင်ရာဖော်ပြချက်
+ရုပ်ပိုင်းဆိုင်ရာပစ္စည်း
+ရွေးပါ
+အပိုင်းအစစတိုင်
+ဖြစ်နိုင်သောမူပိုင်ခွင့်အဆင့်အတန်း
+ကတင်
+PPI
 ရှေ့
-Previous_item
+ယခင် item
 သက်သေပြချက်
-ရက်စွဲ
+Ptp တင်ပို့သည့်ရက်စွဲ
+အရက်ဆိုင်နေ့စွဲ
+အများပြည်သူ
+ထုတ်ဝေမှုအမျိုးအစား
+အများပြည်သူရက်စွဲ
+ထုတ်ဝေသည်
 ထုတ်ဝေသူ
 အဆင့်သတ်မှတ်ချက်
-Rcamid
-ဆက်စပ် - ပြင်ပ - အိုင်ဒီ
-လွှတ်ပေးရေး
-Repub_seconds
-Repub_state
+RCAM ID
+ရည်ညွှန်းသည်
+ဆက်စပ်သောပြင်ပ ID
+ဖြန့်ချိသည့်ရက်
+ဖြန့်ချိအမျိုးအစား
+စက္ကန့်အနည်းငယ်ပြန်လည်
+ပြည်နယ်ပြန်လည်
 ထုတ်ဝေသူ
+ထုတ်ဝေသည့်နေ့စွဲ
+ပြန်လည်ထုတ်ဝေသူအော်ပရေတာ
+ပြန်လည်ထုတ်ဝေသည့်အချိန်
 အရင်းအမြစ်
-ပြန်လည်သုံးသပ်ခြင်း
-သုံးသပ်ချက်
+ပြန်လည်ဆန်းစစ်ခြင်း ID
+ပြန်လည်သုံးသပ်ခန္ဓာကိုယ်
+ပြန်လည်သုံးသပ်ရက်စွဲ
 ပြန်လည်သုံးသပ်သူ
-ပြန်လည်သုံးသပ်ခြင်း
+သုံးသပ်ချက်များ
+ပြန်လည်သုံးသပ်ခေါင်းစဉ်
 အခွင့်အရေး
-အချိန်
+အခွင့်အရေးကြေငြာချက်
+အချိန်ကို run ပါ
 Salients
-လွိုင်ကော်
-အရှုပ်တော်ပုံ
-။
-နေ့
+ကုန်ကြမ်း salients
+Scan ရက်စွဲ
+Scan အချက်များ
+Scan ကြေး
 Scanner
-Scanningcenter
-Serialurl
+စကင်ဖတ်စင်တာ
+အထွေထွေ
+ဒုတိယခေါင်းစဉ်
+အပိုင်း
+Serial URL
 စီးရီး
-Shipping_container
-ရေကြောင်း
-Sizehint
+စင်ပြိုင်
+သင်္ဘောတင်ခွက်
+သင်္ဘောခြေရာခံ
+Shndiscs
+ဆိုက်
+အရွယ်အစားအရိပ်အမြွက်
+SK ID
+SK မှော်
+SK ပိုင်ရှင်
+SK ပိုင်ရှင် nick
+SK အမျိုးအစား
 အသံ
 ရင်းမြစ်
-Source_pixel_height
-Source_pixel_width
-ရင်းမြစ်
-နေပြည်တော်
+အရင်းအမြစ်အဖွဲ့အစည်း
+အရင်းအမြစ် pixel အမြင့်
+အရင်းအမြစ် pixel width
+ရင်းမြစ်စီမံကိန်း
+ရင်းမြစ်အချိန်ဇယား
+ရင်းမြစ် URL
 စပွန်ဆာ
-စပွန်ဆာ
+ပံ့ပိုးကူညီသူနေ့စွဲ
 ကြယ်များ
-Start_localtime
-Start_time
-Station_name
+ဒေသတွင်းအချိန်ကိုစတင်ပါ
+စတင်ချိန်
+ပြည်နယ်
+ဘူတာရုံနာမည်
 အခြေအနေ
-Stop_time
-Stripped_tags
+အချိန်ကိုရပ်ပါ
+ချွတ်ထားသော tags များ
 subclass
+ကောက်ယူစုဆောင်းခြင်း
 ဘာသာရပ်
-အကြောင်းအရာ
-Submitted_url
-Taper
+အကြောင်းအရာ Sorter
+တင်ပြီး URL
+အကျဉ်းချုပ်
+ကွမ်းခြံကုန်း
+အချိန်ဇုန်
 ခေါင်းစဥ်
-ခေါင်းစဉ်
-ခေါင်းစဉ်
+ခေါင်းစဉ် alt script ကို
+ခေါင်းစဉ် Sorter
+ခေါင်းစဉ် Sorter Raw
+ခေါင်းစဉ်အိုင်ဒီ
+သီလ
 သယ်ဆောင်
-Trk_cnt
-Trk_coherent
-Trk_disc_cnt
-Trk_format
-Trk_len_01
-Trk_len_02
-Trk_len_03
-Trk_len_04
-Trk_len_05
-Trk_len_06
-Trk_len_07
-Trk_len_08
-Trk_len_09
-Trk_len_10
-Trk_len_11
-Trk_len_12
-Trk_len_13
-Trk_len_14
-Trk_len_15
-Trk_len_16
-Trk_len_17
-Trk_len_18
-Trk_len_19
-Trk_len_20
-Trk_len_sum
-Trk_src_fmt
+ဘာသာပြန်သူ
+လမ်းကြောင်းအရေအတွက်
+ဆိုနိုင်ပါတယ်ခြေရာခံ
+disc ကိုရေတွက်
+လမ်းကြောင်းပုံစံ
+လမ်းကြောင်းအရှည် 01
+လမ်းကြောင်းအရှည် 02
+လမ်းကြောင်းအရှည် 03
+လမ်းကြောင်းအရှည် 04
+လမ်းကြောင်းအရှည် 05
+လမ်းကြောင်းအရှည် 06
+လမ်းကြောင်းအရှည် 07
+လမ်းကြောင်းအရှည် 08
+လမ်းကြောင်းအရှည် 09
+လမ်းကြောင်းအရှည် 10
+လမ်းကြောင်းအရှည် 11
+လမ်းကြောင်းအရှည် 12
+လမ်းကြောင်းအရှည် 13
+လမ်းကြောင်းအရှည် 14
+လမ်းကြောင်းအရှည် 15
+လမ်းကြောင်းအရှည် 16
+လမ်းကြောင်းအရှည် 17
+လမ်းကြောင်းအရှည် 18
+လမ်းကြောင်းအရှည် 19
+လမ်းကြောင်းအရှည် 20
+လမ်းကြောင်းအရှည် 21
+လမ်းကြောင်းအရှည် 22
+လမ်းကြောင်းအရှည် 23
+လမ်းကြောင်းအရှည် 24
+လမ်းကြောင်းအရှည် 25
+လမ်းကြောင်းအရှည် 26
+လမ်းကြောင်းအရှည် 27
+လမ်းကြောင်းအရှည် 28
+လမ်းကြောင်းအရှည် 29
+လမ်းကြောင်းအရှည်ပေါင်းလဒ်
+src format ကိုခြေရာခံ
 tuner
-ပုံစံ
-ထူးအိမ်သင်
-မွမ်းမံ
+အမျိုးအစား
+ထူးခြားသော ID
+နောက်ဆုံးပေါ်
+အပ်ဒိတ်ရက်
 Updater
 တင်ပါ
-ဥရိ
-url
-Utc_offset
+URI
+URL
+UTC offset
 နေရာ
-Video_codec
+ဗီဒီယို codec
+ဗီဒီယိုအမျိုးအစား
+Vimeo အမြင့်
+Vimeo ID
+Vimeo n entries များ
+Vimeo playlist
+Vimeo ဖွင့်စာရင်းစာရင်း
+Vimeo တင်သူ
+Vimeo တင်သူ ID
+Vimeo အမြင်အရေအတွက်
+Vimeo ဝက်ဘ်စာမျက်နှာ URL
+Vimeo အကျယ်
 Volume ကို
-Wcd_uploaddate
+သတိပေးချက်
+WCD တင်ပို့သည့်နေ့ရက်
 အပတ်
 ဘာ
 ဘယ်မှာလဲ
+WMA အရင်းအမြစ်
+စကားလုံးများ
 နှစ်
-Youtube-height
-Youtube-id
-Youtube-n-entries တွေကို
-Youtube-playlist
-Youtube-playlist-index
-Youtube-uploader
-Youtube-uploader-id
-Youtube-view- ရေတွက်
-Youtube-webpage-url
-Youtube-width
+ဖန်တီးသည့်နှစ်
+ပြုပြင်ထားသောနှစ်
+Youtube အမြင့်
+Youtube ID
+Youtube n အချက်အလက်များ
+Youtube playlist
+Youtube playlist အညွှန်းကိန်း
+Youtube uploader
+Youtube uploader ID
+Youtube
