--- a/packages/ia-components/sandbox/languages/google/german_metadata.txt
+++ b/packages/ia-components/sandbox/languages/google/german_metadata.txt
@@ -3,248 +3,396 @@ Zugangsnummer
 Datum hinzugefügt
 Adder
 Album
-Archiveit-account-id
-Archiveit-Account-Organisationsname
-Archiveit-collection-id
-Name der Archiveit-Sammlung
-Archiveit-Wiederkehr
+Erlaube JPGs
+Höhe
+Einspruch einlegen bei
+Archiveit Account ID
+Name der archivierten Account-Organisation
+Archiveit collection ID
+Name der archivierten Sammlung
+Archiveit job type
+Wiederholung
 Artikeltyp
 Künstler
 Seitenverhältnis
 Zugewiesen an
-Anhang-Nr
+Anhangsnummer
 Audio-Codec
-Audio_sample_rate
+Audio-Abtastrate
 Audiotyp
 Autor
-Avg_rating
-Sicherungsverzeichnis
+Autorenkennung
+Durchschnittliche Bewertung
+Sicherungsort
 Barcode
-Bookplateleaf
-Boxid
-Boxid_2
-Btih
+Besseres PDF
+BIB ID
+BIB-Level
+Name der Bitsavers-Datei
+Exlibris Blatt
+Box ID
+Box ID 2
+BTIH
+Rufnummer
 Rufnummer
 Kamera
-Grund des Falls
+Fall Ursache
 Fallname
-Ccnum
+Falltypinfo
+Kategorie
+CC-Nummer
+Kapitel
+Figuren
 Stadt
 Klasse
-Closed_captioning
+Untertitel
 Sammlung
 Sammlungsbibliothek
+ID der Sammlung
 Farbe
+Kontakt
+Container-ID
+Behälter ID 2
+Inhaltstyp
 Mitwirkender
-Urheberrechtsnachweis
-Copyright-Nachweisdatum
-Copyright-Evidence-Operator
+Urheberrechte ©
+Urheberrechtsnachweise
+Datum des Urheberrechtsnachweises
+Urheberrechtsnachweis Betreiber
 Copyright-Bereich
+Urheber
+Urheberrechtserklärung
+Urheber
+Copyright-Jahr
 Gericht
 Berichterstattung
 Crawler
-Crawljob
+Job crawlen
+Erstellungsdatum
 Erstellungsdatum
 Schöpfer
-CreatorSorter
-CreatorSorterRaw
+Ersteller alt Skript
+Creator Sorter
+Creator Sorter Raw
 Credits
 Kultur
+Notiz kuratieren
+Kuratieren Sie Zustand
 Kuration
 Datum
-Aktenzeichen
-Date-case-terminiert
+Akteneinreichung
+Datum Fall beendet
 Datum der letzten Einreichung
-Date.raw
+Rohes Datum
 Datum erstellt
+Tag
 Beschreibung
+Digitaler Gegenstand
+Digitales Veröffentlichungsdatum
 Maße
-Doc-num
+Direktor
+Discs
+Dokumentnummer
 Aktenzeichen
+Dokument Identifikation
 Spender
 Downloads
+DRG-Kategorie
+DRG-Rotation
+DRG-Sektor
+DRG-Übersetzung
+DRG UTM eastening
+DRG UTM oder NIN g
+DRG X-Skala
+DRG Y-Skala
 Dauer
 Auflage
-Prüfungsname
+Emulator
+Emulator ext
+Emulator starten
+Prüfername
 Externe Kennung
-Extramarc
-Filesxml
+Extra MARC
+Fehlerursachen
+Favoriten
+Gebührenstatus
+Dateiname
+Dateien XML
 Abgabedatum
 Erster Schöpfer
-ErsterTitel
-Erstes Date
-Firstfileserial
+Erster Titel
+Erstmals veröffentlicht
+Erstes Dateidatum
+Erste Dateiserie
 Erster benannter Erfinder
-Foldoutcount
+Ausklappbarer Operator
+Sekunden ausklappbar
+Anzahl der Ausklappungen
+Folgt
 Bilder pro Sekunde
+Galerie ID
+Genre
 Google-ID
-Gruppeneinheit
+Gruppe Kunst Einheit
+Hat mp3
+Versteckt
+Halter
+ICH WÜRDE
 Kennung
-Identifier-Zugriff
-Identifier-Arche
-Identifier-Lätzchen
+ID-Zugriff
+Kennung ARK
+Kennung BIB
+Kennung BIB
 Bildanzahl
+Impressum
 Erstveröffentlichung
-Inventorcity
-Inventarland
+Insightu ID
+Erfinderstadt
+Erfinderland
+Erfinderprovinz
 Rechnung
-Is_clip
-Isbn
-Issn
+Clip ist
+ISBN
+ISSN
+Problem
 Ausgabedatum
-Journalabbrv
+Tagebuch
+Zeitschriftentitel
+Abkürzung der Zeitschrift
 Zeitschriftentitel
 Zuständigkeit
-Jury-Forderung
+Jury fordern
+Schlüsselwörter
+Wahrzeichen
 Sprache
-LanguageSorter
+Sprachsortierer
+Datum der letzten Aktualisierung
 Letztes Datum
-Letzte Datei
-Lastfileserial
+Letztes Dateidatum
+Letzte Dateiserie
 Breite
-Lcamid
-Lccn
-Lg_lastmodifieddate
-Lizenzurl
+LCAM ID
+LCCN
+Lg Datum der letzten Änderung
+Lizenz
+Lizenz URL
 Abstammung
+Link zum Katalog
 Lage
+Standortdatum
 Längengrad
 Inhalte für Erwachsene
-Md5s
+MD5S
 Medientyp
 Mittel
 Einfarbig
 Monat
-Mpeg_program
-Nal Rufnummer
+MPEG-Programm
+NAL Rufnummer
 Art des Anzugs
 Nächster
 Nächstes Objekt
+NIN-Datei
+NIN-Mix-ID
+NIN Anzahl Bewertungen
+NIN Foto
+NIN-Bewertungen durchschnittlich
+NIN total hört zu
+NIN-Benutzer-ID
+Noarchivetorrent
 Noindex
 Anmerkungen
-Num_reviews
-Numwarcs
-Oclc-ID
-Ocr
+Anzahl der letzten Bewertungen
+Anzahl Bewertungen
+Nummer oben dl
+Nummer eric ID
+Anzahl WARCs
+OCLC
+OCLC ID
+OCR
 Olsearch
 Openlibrary
 Operator
-Originalurl
-Andere_Copyright_Inhaber
-Pacer-case-num
+Ursprüngliche URL
+Andere Urheberrechtsinhaber
+Schrittmacher-Fallnummer
 Seitenfortschritt
+Seitenlayout
 SeitenReichweite
-Partner_shiptracking
+Seiten
+Sendungsverfolgung für Partner
 Teil von
-Perma_url
-Möglicher-Copyright-Status
+Perma URL
+Physische Beschreibung
+Physische Artikel
+Pick
+Stück Stil
+Möglicher Copyright-Status
 Geschrieben von
-Ppi
+PPI
 Bisherige
 Vorheriges Item
 Herkunft
+Ptp Upload-Datum
 Veröffentlichungsdatum
+Öffentlichkeit
+Publikationsart
+Öffentliches Datum
+Veröffentlicht
 Verleger
 Bewertung
-Rcamid
-Verwandte-externe-ID
-Freigabetyp
-Repub_seconds
-Repub_state
+RCAM ID
+Bezogen auf
+Verwandte externe ID
+Veröffentlichungsdatum
+Release-Typ
+Sekunden erneut veröffentlichen
+Status erneut veröffentlichen
 Neuverleger
+Datum der Wiederveröffentlichung
+Republisher-Betreiber
+Republisher-Zeit
 Ressource
-Reviewbody
+ID überprüfen
+Körper überprüfen
 Prüfungsdatum
 Gutachter
+Bewertungen
 Titel der Bewertung
 Rechte
+Erklärung der Rechte
 Laufzeit
 Salients
-Salients.raw
-Skandat
-Scanfaktoren
-Scanfee
+Salients roh
+Scan-Datum
+Scan-Faktoren
+Scangebühr
 Scanner
-Scancenter
-Serialurl
+Scan-Center
+Seccion
+Zweittitel
+Sektion
+Serien-URL
 Serie
+Signatur
 Versandbehälter
 Schiffsverfolgung
-Grössentipp
+Shndiscs
+Seite? ˅
+Größenhinweis
+SK ID
+SK Magie
+SK-Besitzer
+SK Besitzer Nick
+SK-Typ
 Klang
 Quelle
-Source_pixel_height
-Source_pixel_width
-Source_schedule
-Source_url
+Quellorganisation
+Höhe des Quellpixels
+Breite des Quellpixels
+Quellprojekt
+Quellzeitplan
+Quell-URL
 Sponsor
-Patenschaft übernehmen
+Datum des Sponsors
 Sterne
-Start_localtime
+Starten Sie die Ortszeit
 Startzeit
+Zustand
 Stationsname
 Status
-Stop_time
-Stripped_tags
+Stoppen Sie die Zeit
+Abgezogene Tags
 Unterklasse
+Untersammlung
 Gegenstand
-SubjectSorter
-Submitted_url
+Betreffsortierer
+Übermittelte URL
+Zusammenfassung
 Verjüngung
+Zeitzone
 Titel
-TitleSorter
-TitleSorterRaw
+Titel alt script
+Titelsortierer
+Titelsortierer Raw
+Titel-ID
+Überträgt
 Übergeber
-Trk_cnt
-Trk_coherent
-Trk_disc_cnt
-Trk_format
-Trk_len_01
-Trk_len_02
-Trk_len_03
-Trk_len_04
-Trk_len_05
-Trk_len_06
-Trk_len_07
-Trk_len_08
-Trk_len_09
-Trk_len_10
-Trk_len_11
-Trk_len_12
-Trk_len_13
-Trk_len_14
-Trk_len_15
-Trk_len_16
-Trk_len_17
-Trk_len_18
-Trk_len_19
-Trk_len_20
-Trk_len_sum
-Trk_src_fmt
+Übersetzer
+Trackanzahl
+Track kohärent
+Anzahl der Titel
+Track-Format
+Streckenlänge 01
+Streckenlänge 02
+Streckenlänge 03
+Streckenlänge 04
+Streckenlänge 05
+Streckenlänge 06
+Streckenlänge 07
+Spurlänge 08
+Streckenlänge 09
+Streckenlänge 10
+Spurlänge 11
+Spurlänge 12
+Spurlänge 13
+Streckenlänge 14
+Streckenlänge 15
+Streckenlänge 16
+Streckenlänge 17
+Streckenlänge 18
+Streckenlänge 19
+Streckenlänge 20
+Spurlänge 21
+Spurlänge 22
+Spurlänge 23
+Streckenlänge 24
+Streckenlänge 25
+Spurlänge 26
+Spurlänge 27
+Spurlänge 28
+Spurlänge 29
+Spurlängensumme
+Verfolgen Sie das src-Format
 Tuner
 Art
 Eindeutige ID
+Aktualisiert
 Aktualisierungsdatum
 Updater
 Uploader
-Uri
-Url
-Utc_offset
+URI
+URL
+UTC-Offset
 Tagungsort
 Video-Codec
+Videotyp
+Vimeo Höhe
+Vimeo ID
+Vimeo n Einträge
+Vimeo-Wiedergabeliste
+Vimeo-Wiedergabelistenindex
+Vimeo-Uploader
+Vimeo-Uploader-ID
+Anzahl der Vimeo-Aufrufe
+URL der Vimeo-Webseite
+Vimeo Breite
 Volumen
-Wcd_uploaddate
+Warnung
+Datum des Uploads der WCD
 Woche
 Was
 Wo
+WMA-Ressource
+Wörter
 Jahr
-Youtube-Höhe
-Youtube-ID
-Youtube-n-Einträge
-Youtube-Playlist
+Jahr erstellt
+Jahr geändert
+Youtube Höhe
+Youtube ID
+Youtube n Einträge
+Youtube-Wiedergabeliste
 Youtube-Playlist-Index
-Youtube-Uploader
-Youtube-Uploader-ID
-Youtube-View-Count
-Youtube-webpage-url
-Youtube-Breite
+YouTube-Uploader
+YouTube-Uploader-ID
+Youtube
