--- a/packages/ia-components/sandbox/languages/google/marathi_metadata.txt
+++ b/packages/ia-components/sandbox/languages/google/marathi_metadata.txt
@@ -1,250 +1,398 @@
 प्रवेश
-एक्सेसियन_ क्रमांक
+प्रवेश क्रमांक
 जोडलेली तारीख
 अड्डर
 अल्बम
-संग्रह-खाते-आयडी
-संग्रह-खाते-संस्था-नाव
-संग्रह-संग्रह-आयडी
-संग्रह-संग्रह-नाव
-संग्रह-पुनरावृत्ती
-लेख-प्रकार
+जेपीजींना परवानगी द्या
+समुद्रसपाटीपासूनची उंची
+कडून आवाहन
+आर्काइव्ह खाते खाते
+संग्रहित खाते संस्थेचे नाव
+संग्रहण आयडी
+संग्रह संग्रह
+अर्काईव्ह जॉबचा प्रकार
+संग्रहण पुनरावृत्ती
+लेख प्रकार
 कलाकार
 प्रसर गुणोत्तर
 नियुक्त
-संलग्नक-क्रमांक
-ऑडिओ_कोडेक
-ऑडिओ_ नमूना_दर
-ऑडिओ_प्रकार
+संलग्नक क्रमांक
+ऑडिओ कोडेक
+ऑडिओ नमुना दर
+ऑडिओ प्रकार
 लेखक
-सरासरी_ररेटिंग
-बॅकअप_लोकेशन
+लेखक आयडी
+सरासरी रेटिंग
+बॅकअप स्थान
 बारकोड
+उत्तम पीडीएफ
+बीआयबी आयडी
+बीआयबी पातळी
+बिटसेव्हर्स फाईलचे नाव
 पुस्तकपत्रिका
-बॉक्सिड
-बॉक्सिड 2
-Btih
-कॉल_ क्रमांक
+बॉक्स आयडी
+बॉक्स आयडी 2
+बीटीआयएच
+कॉल नंबर
+कॉल नंबर
 कॅमेरा
-प्रकरण-कारण
-प्रकरण-नाव
-Ccnum
+प्रकरण कारण
+प्रकरण नाव
+प्रकरण प्रकार माहिती
+वर्ग
+सीसी क्रमांक
+अध्याय
+वर्ण
 शहर
 वर्ग
 बंद मथळे
 संग्रह
-संग्रह-ग्रंथालय
+संग्रह ग्रंथालय
+संग्रह आयडी
 रंग
+संपर्क
+कंटेनर आयडी
+कंटेनर आयडी 2
+सामग्री प्रकार
 हातभार लावणारा
-कॉपीराइट-पुरावा
-कॉपीराइट-पुरावा-तारीख
-कॉपीराइट-पुरावा-ऑपरेटर
-कॉपीराइट-प्रदेश
+कॉपीराइट
+कॉपीराइट पुरावा
+कॉपीराइट पुरावा तारीख
+कॉपीराइट पुरावा ऑपरेटर
+कॉपीराइट प्रदेश
+कॉपीराइट धारक
+कॉपीराइट विधान
+कॉपीराइट धारक
+कॉपीराइट वर्ष
 कोर्ट
 कव्हरेज
 क्रॉलर
-क्रॉलजॉब
-तयार केले
+क्रॉल जॉब
+तारीख तयार करा
+तयार केलेली तारीख
 निर्माणकर्ता
-क्रिएटरसोर्टर
-क्रिएटरसोर्टर रॉ
+क्रिएटर Alt स्क्रिप्ट
+क्रिएटर सॉर्टर
+क्रिएटर सॉर्टर रॉ
 जमा
 संस्कृती
+अचूक टीप
+क्युरेट स्टेट
 क्युरीशन
 तारीख
-तारीख-खटला दाखल
-तारीख-केस-निरस्त
-तारीख-अंतिम-दाखल
-तारीख.राव
-तारीख_क्रिएटेड
+तारीख दाखल
+तारीख प्रकरण संपुष्टात आले
+अंतिम फाइलिंगची तारीख
+तारीख कच्ची
+तारीख तयार केली
+दिवस
 वर्णन
+डिजिटल आयटम
+डिजिटल प्रकाशन तारीख
 परिमाण
-डॉक-नंबर
-डॉकेट-क्रमांक
+संचालक
+डिस्क्स
+दस्तऐवज क्रमांक
+डॉकेट क्रमांक
+दस्तऐवज आयडी
 दाता
 डाउनलोड
+डीआरजी श्रेणी
+डीआरजी फिरविणे
+डीआरजी क्षेत्र
+डीआरजी भाषांतर
+डीआरजी यूटीएम सुलभ करणे
+डीआरजी यूटीएम उत्तर एनआयएन जी
+डीआरजी एक्स स्केल
+डीआरजी वाय स्केल
 कालावधी
 संस्करण
-परिक्षण
-बाह्य-अभिज्ञापक
-एक्स्ट्रामार्क
-फायलीएक्सएमएल
-दाखल करणे
-फर्स्टक्रिएटर
-फर्स्टटाईल
-फर्स्टफिल्डेट
-फर्स्टफिलेसरियल
-फर्स्टनेमेन्डिव्हेंटर
-फोल्डआउट
-फ्रेम्स_पर_सेकंद
-गूगल-आयडी
-ग्रुपार्टनीट
+इम्युलेटर
+इमुलेटर एक्स्ट्रा
+इम्युलेटर प्रारंभ
+परीक्षक नाव
+बाह्य अभिज्ञापक
+अतिरिक्त मार्क
+अयशस्वी कारणे
+आवडी
+फी स्थिती
+फाईलचे नाव
+फायली एक्सएमएल
+दाखल करण्याची तारीख
+प्रथम निर्माता
+पहिले शीर्षक
+प्रथम प्रकाशित
+प्रथम फाईल तारीख
+प्रथम फाइल मालिका
+प्रथम नामांकित शोधक
+फोल्डआउट ऑपरेटर
+फोल्डआउट सेकंद
+फोल्डआउट गणना
+अनुसरण करते
+फ्रेम प्रति सेकंद
+गॅलरी आयडी
+शैली
+गुगल आयडी
+ग्रुप आर्ट युनिट
+एमपी 3 आहे
+लपलेले
+धारक
+आयडी
 अभिज्ञापक
-अभिज्ञापक-प्रवेश
-अभिज्ञापक
-अभिज्ञापक-बिब
-इमेजकाउंट
+अभिज्ञापक प्रवेश
+अभिज्ञापक एआरके
+अभिज्ञापक बीआयबी
+अभिज्ञापक बीआयबी
+प्रतिमा संख्या
+ठसा
 प्रारंभिक प्रकाशनात
-शोधक
-अन्वेषक
+अंतर्दृष्टी आयडी
+शोधक शहर
+शोधक देश
+शोधक राज्य प्रांत
 बीजक
-आहे_क्लिप
-ईएसबीएन
-जारी
-जारी
-जर्नलाब्ब्रव्ह
-पत्रिका
+क्लिप आहे
+आयएसबीएन
+ISSN
+देणे
+जारी तारीख
+जर्नल
+जर्नल शीर्षक
+जर्नल संक्षेप
+जर्नल शीर्षक
 कार्यक्षेत्र
-निर्णायक-मागणी
+जूरी मागणी
+कीवर्ड
+लँडमार्क
 इंग्रजी
-लँग्वेजोर्टर
-शेवटचा
-लास्टफिलेट
-लास्टफिलेसरियल
+भाषा सॉर्टर
+अखेरची अद्यतनित तारीख
+शेवटची तारीख
+अंतिम फाईल तारीख
+शेवटची फाइल मालिका
 अक्षांश
-Lcamid
-Lccn
-Lg_lastmodifieddate
+एलसीएएम आयडी
+एलसीसीएन
+अंतिम सुधारित तारीख एलजी
 परवाना
+परवान्याची URL
 वंश
+कॅटलॉगचा दुवा
 स्थान
+स्थान तारीख
 रेखांश
-प्रौढ_कंटेंट
+प्रौढ सामग्री
 एमडी 5 एस
 माध्यम प्रकार
 मध्यम
 एकरंगी
 महिना
-एमपीईजी_प्रोग्राम
-नल कॉल नंबर
-निसर्ग-सूट
+एमपीईजी कार्यक्रम
+NAL कॉल नंबर
+दाव्याचे स्वरूप
 पुढे
 पुढील आयटम
+एनआयएन फाइल
+एनआयएन मिक्स आयडी
+एनआयएन क्रमांक रेटिंग्ज
+एनआयएन फोटो
+एनआयएन रेटिंग सरासरी
+एनआयएन एकूण ऐकतो
+एनआयएन वापरकर्ता आयडी
+Noarchivetorrent
 Noindex
 नोट्स
-संख्या_दृश्ये
-नंबरवर्क्स
-Oclc-id
+अलीकडील पुनरावलोकने संख्या
+संख्या पुनरावलोकने
+क्रमांक टॉप डीएल
+क्रमांक एरिक आयडी
+संख्या WARC
+ओसीएलसी
+ओसीएलसी आयडी
 ओसीआर
 ओल्शार्च
 ओपनलिब्ररी
 ऑपरेटर
-ओरिजन्युरल
-अन्य_कॉपीराइट_होल्डर
-पेसर-केस-नंबर
-पृष्ठ-प्रगती
-पेजरेंज
-भागीदार_शिप ट्रॅकिंग
+मूळ URL
+इतर कॉपीराइट धारक
+पेसर केस नंबर
+पृष्ठ प्रगती
+पानाचा आराखडा
+पृष्ठ श्रेणी
+पृष्ठे
+भागीदार जहाज ट्रॅकिंग
 भाग
-पर्मा_उर्ल
-संभाव्य-कॉपीराइट-स्थिती
-पोस्टबाय
+पर्मा यूआरएल
+शारीरिक वर्णन
+भौतिक वस्तू
+निवडा
+पीस शैली
+संभाव्य कॉपीराइट स्थिती
+द्वारा पोस्ट केलेले
 पीपीआय
 मागील
-मागील_साइट
+मागील आयटम
 प्रोव्हिनेन्स
-सार्वजनिक करा
+Ptp अपलोड तारीख
+पब तारीख
+सार्वजनिक
+प्रकाशन प्रकार
+सार्वजनिक तारीख
+प्रकाशित केले
 प्रकाशक
 रेटिंग
-Rcamid
-संबंधित-बाह्य-आयडी
-रीलीटीप
-रिपब_सेकंद
-रिपब_स्टेट
+आरसीएएम आयडी
+संदर्भित
+संबंधित बाह्य आयडी
+प्रकाशन तारीख
+रीलिझचा प्रकार
+सेकंद पुन्हा प्रकाशित करा
+राज्य पुन्हा प्रकाशित करा
 पुनर्प्रकाशक
+पुनर्प्रकाशक तारीख
+पुनर्प्रकाशक ऑपरेटर
+पुनर्प्रकाशक वेळ
 स्त्रोत
+पुनरावलोकन आयडी
+शरीराचे पुनरावलोकन करा
+पुनरावलोकन तारीख
 पुनरावलोकनकर्ता
-पुनरावलोकन
-पुनरावलोकनकर्ता
-पुनरावलोकन
+पुनरावलोकने
+पुनरावलोकन शीर्षक
 अधिकार
-रनटाइम
+अधिकार विधान
+धावण्याची वेळ
 ठळक
-Salients.raw
-घोटाळा
-स्कॅनफेक्टर्स
-स्कॅनफी
+ठळक कच्चे
+स्कॅन तारीख
+स्कॅन घटक
+स्कॅन फी
 स्कॅनर
-स्कॅनिंगसेन्टर
-सीरियलर्ल
+स्कॅन केंद्र
+Seccion
+दुय्यम पदवी
+विभाग
+अनुक्रमांक
 मालिका
-शिपिंग_कंटेनर
-शिपट्रॅकिंग
-आकारमान
+शेल्फमार्क
+शिपिंग कंटेनर
+शिप ट्रॅकिंग
+शेंडीक्स
+जागा
+आकार इशारा
+एसके आयडी
+एसके जादू
+एसके मालक
+एसके मालक निक
+एसके प्रकार
 आवाज
-स्त्रोत
-स्त्रोत_पिक्सल_हाइट
-स्त्रोत_पिक्सल_विड्थ
-स्त्रोत_शेड्यूल
-स्त्रोत_उर्ल
+स्रोत
+स्त्रोत संस्था
+स्त्रोत पिक्सेल उंची
+स्त्रोत पिक्सेल रूंदी
+स्रोत प्रकल्प
+स्रोत वेळापत्रक
+स्त्रोत URL
 प्रायोजक
-प्रायोजक
+प्रायोजक तारीख
 तारे
-प्रारंभ_लोकटाइम
+स्थानिक वेळ प्रारंभ करा
 सुरवातीची वेळ
+राज्य
 स्थानकाचे नाव
 स्थिती
-स्टॉप_टाइम
-स्ट्रिप केलेले_टॅग
+थांबा वेळ
+स्ट्रीप केलेले टॅग
 उपवर्ग
+उपसमूह
 विषय
-सब्जेक्टर्स
-सबमिट_उर्ल
+विषय सॉर्टर
+सबमिट केलेली URL
+सारांश
 टेपर
+वेळ क्षेत्र
 शीर्षक
-शीर्षकसॉर्टर
-शीर्षकसॉटररॉ
+शीर्षक Alt स्क्रिप्ट
+शीर्षक सॉर्टर
+शीर्षक सॉर्टर रॉ
+शीर्षक आयडी
+लिप्यंतरण
 हस्तांतरणकर्ता
-Trk_cnt
-ट्रक_कोहेरेंट
-Trk_disc_cnt
-ट्रक_फार्मेट
-Trk_len_01
-Trk_len_02
-Trk_len_03
-Trk_len_04
-Trk_len_05
-Trk_len_06
-Trk_len_07
-Trk_len_08
-Trk_len_09
-Trk_len_10
-Trk_len_11
-ट्रक_लेन_२
-Trk_len_13
-Trk_len_14
-Trk_len_15
-Trk_len_16
-Trk_len_17
-Trk_len_18
-Trk_len_19
-ट्रक_लेन_20
-Trk_len_sum
-Trk_src_fmt
+अनुवादक
+ट्रॅक संख्या
+सुसंगत ट्रॅक
+ट्रॅक डिस्क गणना
+ट्रॅक स्वरूप
+ट्रॅक लांबी 01
+ट्रॅक लांबी 02
+ट्रॅक लांबी 03
+ट्रॅक लांबी 04
+ट्रॅक लांबी 05
+ट्रॅक लांबी 06
+ट्रॅक लांबी 07
+ट्रॅक लांबी 08
+ट्रॅक लांबी 09
+ट्रॅक लांबी 10
+ट्रॅक लांबी 11
+ट्रॅक लांबी 12
+ट्रॅक लांबी 13
+ट्रॅक लांबी 14
+ट्रॅक लांबी 15
+ट्रॅक लांबी 16
+ट्रॅक लांबी 17
+ट्रॅक लांबी 18
+ट्रॅक लांबी 19
+ट्रॅक लांबी 20
+ट्रॅक लांबी 21
+ट्रॅक लांबी 22
+ट्रॅक लांबी 23
+ट्रॅक लांबी 24
+ट्रॅक लांबी 25
+ट्रॅक लांबी 26
+ट्रॅक लांबी 27
+ट्रॅक लांबी 28
+ट्रॅक लांबी 29
+ट्रॅक लांबी बेरीज
+एससीआर स्वरूपनचा मागोवा घ्या
 ट्यूनर
 प्रकार
-युनिक_आइड
+युनिक आयडी
 अद्यतनित
+अद्यतन तारीख
 अपडेटर
 अपलोडर
-उरी
-युआरएल
-यूटीसी_ऑफसेट
+यूआरआय
+URL
+यूटीसी ऑफसेट
 ठिकाण
-व्हिडिओ_कोडेक
+व्हिडिओ कोडेक
+व्हिडिओ प्रकार
+Vimeo उंची
+Vimeo आयडी
+Vimeo एन नोंदी
+Vimeo प्लेलिस्ट
+Vimeo प्लेलिस्ट अनुक्रमणिका
+Vimeo अपलोडर
+Vimeo अपलोडर आयडी
+Vimeo दृश्य संख्या
+Vimeo वेब पृष्ठ URL
+Vimeo रुंदी
 खंड
-डब्ल्यूसीडी_अपलोडडेट
+चेतावणी
+डब्ल्यूसीडी अपलोड तारीख
 आठवडा
 काय
 कोठे
+डब्ल्यूएमए संसाधन
+शब्द
 वर्ष
-यूट्यूब-उंची
-यूट्यूब-आयडी
-यूट्यूब-एन-प्रविष्ट्या
-यूट्यूब-प्लेलिस्ट
-यूट्यूब-प्लेलिस्ट-अनुक्रमणिका
-यूट्यूब-अपलोडर
-यूट्यूब-अपलोडर-आयडी
-यूट्यूब-दृश्य-संख्या
-यूट्यूब-वेबपृष्ठ-url
-यूट्यूब रुंदी
+वर्ष तयार केले
+वर्ष सुधारित
+यूट्यूब उंची
+यूट्यूब आयडी
+यूट्यूब एन प्रविष्ट्या
+यूट्यूब प्लेलिस्ट
+यूट्यूब प्लेलिस्ट अनुक्रमणिका
+यूट्यूब अपलोडर
+यूट्यूब अपलोडर आयडी
+YouTube
